(BMICalculator)  added and retrieved views ID

--- a/BMICalculator/app/src/main/res/layout/activity_main.xml
+++ b/BMICalculator/app/src/main/res/layout/activity_main.xml
@@ -24,11 +24,13 @@
         android:orientation="horizontal">
 
         <RadioButton
+            android:id="@+id/radio_btn_male"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Male" />
 
         <RadioButton
+            android:id="@+id/radio_btn_female"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Female" />
@@ -36,6 +38,7 @@
     </RadioGroup>
 
     <EditText
+        android:id="@+id/edit_txt_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
@@ -49,12 +52,14 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/edit_txt_feet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="Feet"
             android:inputType="number" />
 
         <EditText
+            android:id="@+id/edit_txt_inches"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="Inches"
@@ -63,6 +68,7 @@
     </LinearLayout>
 
     <EditText
+        android:id="@+id/edit_txt_weight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
@@ -70,12 +76,14 @@
         android:inputType="number" />
 
     <Button
+        android:id="@+id/btn_calculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:text="Calculate" />
 
     <TextView
+        android:id="@+id/txt_view_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
