--- a/BMICalculator/app/src/main/res/layout/activity_main.xml
+++ b/BMICalculator/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:hint="Weight (kg)"
+        android:hint="Weight (lbs)"
         android:inputType="number" />
 
     <Button
@@ -86,7 +86,6 @@
         android:id="@+id/txt_view_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
-        android:text="23.6 - You are at an healthy weight!" />
+        android:layout_margin="24dp" />
 
 </LinearLayout>
