--- a/Labo1Spinners/app/src/main/res/layout/activity_main.xml
+++ b/Labo1Spinners/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:layout_margin="20dp"
     android:background="#f2f0eb">
 
     <TextView
@@ -18,25 +17,26 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
+        android:gravity="center_horizontal"
         android:layout_marginVertical="30dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_margin="30dp"
+            android:layout_margin="0dp"
             android:layout_alignParentLeft="true">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="183dp"
                 android:layout_height="wrap_content"
-                android:text="Province:"
                 android:padding="10dp"
-                android:textSize="20sp"/>
+                android:text="Province:"
+                android:textSize="20sp" />
 
             <Spinner
                 android:id="@+id/table_provinces"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:prompt="@string/spinner1_prompt"/>
 
@@ -45,22 +45,22 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="30dp"
-            android:layout_alignParentRight="true">
+            android:layout_alignParentRight="true"
+            android:layout_margin="0dp"
+            android:orientation="vertical">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="184dp"
                 android:layout_height="wrap_content"
-                android:text="Villes:"
                 android:padding="10dp"
-                android:textSize="20sp"/>
+                android:text="Villes:"
+                android:textSize="20sp" />
 
             <Spinner
                 android:id="@+id/table_villes"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:prompt="@string/spinner2_prompt"/>
+                android:prompt="@string/spinner2_prompt" />
 
         </LinearLayout>
 
