--- a/ExerciceFormulaire/app/src/main/res/layout/activity_main.xml
+++ b/ExerciceFormulaire/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:fillViewport="true"
-    android:background="#868a91">
+    android:background="#4A6AA1">
 
     <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
@@ -42,7 +42,8 @@
             app:layout_constraintTop_toBottomOf="@id/institution_txtview"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias=".2"
-            android:layout_margin="10dp">
+            android:layout_margin="10dp"
+            android:background="@drawable/border">
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -58,15 +59,14 @@
                     android:padding="5dp"
                     android:gravity="center_horizontal"
                     android:background="@drawable/border"/>
-
                 <EditText
                     android:id="@+id/lastname_edittxt"
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_column="1"
-                    android:background="@color/white"
                     android:inputType="text"
-                    android:layout_marginLeft="10dp"/>
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/background_edittext"/>
             </TableRow>
             <TableRow
                 android:layout_width="match_parent"
@@ -89,8 +89,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:inputType="text"
-                    android:background="@color/white"
-                    android:layout_marginLeft="10dp"/>
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/background_edittext"/>
             </TableRow>
             <TableRow
                 android:layout_width="match_parent"
@@ -113,7 +113,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
-                    android:layout_marginLeft="10dp">
+                    android:layout_margin="10dp"
+                    android:paddingLeft="10dp"
+                    android:background="@drawable/background_edittext">
                     <RadioButton
                         android:id="@+id/male_radiobtn"
                         android:layout_width="wrap_content"
@@ -159,7 +161,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:minHeight="30dp"
-                        android:background="@color/white"/>
+                        android:background="@drawable/background_spinner"
+                        android:layout_marginVertical="4dp"/>
                 </LinearLayout>
             </TableRow>
             <TableRow
@@ -182,7 +185,9 @@
                     android:layout_column="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp">
+                    android:layout_margin="10dp"
+                    android:paddingLeft="5dp"
+                    android:background="@drawable/background_edittext">
                     <CheckBox
                         android:id="@+id/fulltime_checkbox"
                         android:layout_width="wrap_content"
@@ -226,11 +231,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_column="1"
-                    android:background="@color/white"
                     android:inputType="text"
                     android:minHeight="150dp"
                     android:layout_marginVertical="5dp"
-                    android:layout_marginLeft="10dp"/>
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/background_edittext"/>
             </TableRow>
         </TableLayout>
 
