--- a/ProjetExercices/app/src/main/res/drawable/white_border.xml
+++ b/ProjetExercices/app/src/main/res/drawable/white_border.xml
@@ -2,4 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke android:width="2dp" android:color="@color/white" />
+    <solid android:color="@color/toolbar_bg" />
+    <corners android:radius="10dp" />
 </shape>
