--- a/ProjetExercices/app/src/main/res/layout/activity_second.xml
+++ b/ProjetExercices/app/src/main/res/layout/activity_second.xml
@@ -16,15 +16,48 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/selected_categ_txtview"
             android:theme="@style/Theme.AppCompat.DayNight"
             android:background="@color/black"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/my_recyclerView"
+        <TextView
+            android:id="@+id/selected_categ_txtview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="allo"
+            android:textSize="32sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/my_toolbar"
-            android:paddingBottom="52dp"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/my_ex_recyclerView"
+            android:layout_margin="8dp"
+            android:gravity="center"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/my_ex_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/selected_categ_txtview"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:paddingBottom="152dp"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_exercice_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fabSize="mini"
+            android:src="@drawable/baseline_add_24"
+            app:backgroundTint="@color/white"
+            android:elevation="16dp"
+            android:layout_margin="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
