--- a/ProjetExercices/app/src/main/res/layout/dialog_add_exercice_form.xml
+++ b/ProjetExercices/app/src/main/res/layout/dialog_add_exercice_form.xml
@@ -20,6 +20,13 @@
             android:scaleType="fitXY"
             tools:srcCompat="@tools:sample/avatars" />
 
+        <EditText
+            android:id="@+id/chemin_image_exercice_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:clickable="false" />
+
         <Button
             android:id="@+id/choisir_exercice_image_button"
             android:layout_width="wrap_content"
@@ -46,8 +53,7 @@
             android:text="Nom de l'exercice"
             android:textSize="24sp"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:gravity="center" />
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/nom_exercice_edittext"
@@ -56,7 +62,6 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/black_border"
             android:minHeight="30dp"
-            android:gravity="center"
             android:inputType="text" />
 
         <TextView
@@ -66,8 +71,7 @@
             android:text="Catégorie de l'exercice"
             android:textSize="24sp"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:gravity="center" />
+            android:textStyle="bold" />
 
         <Spinner
             android:id="@+id/categ_exercice_spinner"
@@ -84,8 +88,7 @@
             android:text="Description de l'exercice"
             android:textSize="24sp"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:gravity="center" />
+            android:textStyle="bold"  />
 
         <EditText
             android:id="@+id/desc_exercice_textbox"
@@ -104,8 +107,7 @@
             android:text="Instructions de l'exercice"
             android:textSize="24sp"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:gravity="center" />
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/instr_exercice_textbox"
